PROJECT (TIME_PASS)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_BUILD_TYPE DEBUG)
ADD_DEFINITIONS(-Wall)

#must add "-lrt" flag to reference "shm_open" and "unlink"
SET(CMAKE_EXE_LINKER_FLAGS "-lrt -pthread")

GET_FILENAME_COMPONENT(TIME_PASS_BASE ".." REALPATH)
#SET(CMAKE_INSTALL_PREFIX  ${TIME_PASS_BASE})
#SET (EXECUTABLE_OUTPUT_PATH ${TIME_PASS_BASE}/example/bin)

INCLUDE_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/include)

FIND_LIBRARY(GLOBAL NAMES TimepassGlobal PATHS ${CMAKE_INSTALL_PREFIX}/lib)
FIND_LIBRARY(LOCK NAMES TimepassLock PATHS ${CMAKE_INSTALL_PREFIX}/lib)
# FIND_LIBRARY(MODEL NAMES TimepassModel PATHS ${CMAKE_INSTALL_PREFIX}/lib)
FIND_LIBRARY(SHM NAMES TimepassShm PATHS ${CMAKE_INSTALL_PREFIX}/lib)
# FIND_LIBRARY(SOCK NAMES TimepassSock PATHS ${CMAKE_INSTALL_PREFIX}/lib)
# FIND_LIBRARY(SYS NAMES TimepassSys PATHS ${CMAKE_INSTALL_PREFIX}/lib)
FIND_LIBRARY(TIME NAMES TimepassTime PATHS ${CMAKE_INSTALL_PREFIX}/lib)

ADD_SUBDIRECTORY(shm/shm_array)
ADD_SUBDIRECTORY(shm/shm_vector)
ADD_SUBDIRECTORY(shm/shm_queue)
ADD_SUBDIRECTORY(shm/shm_list)
ADD_SUBDIRECTORY(shm/shm_doublylist)
ADD_SUBDIRECTORY(shm/shm_set)
ADD_SUBDIRECTORY(shm/shm_multiset)
ADD_SUBDIRECTORY(shm/shm_map)
ADD_SUBDIRECTORY(shm/shm_multimap)
ADD_SUBDIRECTORY(shm/shm_hashlist)
ADD_SUBDIRECTORY(shm/shm_hashset)
ADD_SUBDIRECTORY(shm/shm_hashmap)
ADD_SUBDIRECTORY(shm/shm_hashmultiset)
ADD_SUBDIRECTORY(shm/shm_hashmultimap)
ADD_SUBDIRECTORY(model/mutex_binarybuff_produce_consume)
ADD_SUBDIRECTORY(model/mutex_produce_consume)
