PROJECT (TIME_PASS)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_BUILD_TYPE DEBUG)
GET_FILENAME_COMPONENT(TIME_PASS_BASE ".." REALPATH)
#SET(CMAKE_INSTALL_PREFIX ${TIME_PASS_BASE})

INCLUDE_DIRECTORIES(${TIME_PASS_BASE}/src)


ADD_SUBDIRECTORY(global)
ADD_SUBDIRECTORY(lock)
ADD_SUBDIRECTORY(model)
ADD_SUBDIRECTORY(shm)
ADD_SUBDIRECTORY(sock)
ADD_SUBDIRECTORY(sys)
ADD_SUBDIRECTORY(time)
