PROJECT (TIME_PASS)
CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
SET(CMAKE_BUILD_TYPE DEBUG)
SET(CMAKE_SHARED_LINKER_FLAGS "-lrt -pthread")

GET_FILENAME_COMPONENT(TIME_PASS_BASE ".." REALPATH)
#SET(CMAKE_INSTALL_PREFIX ${TIME_PASS_BASE})

LINK_DIRECTORIES(${CMAKE_INSTALL_PREFIX}/lib)

INCLUDE_DIRECTORIES(${TIME_PASS_BASE}/src)

SET(GLOBAL_SHARED "global_shared")
SET(GLOBAL_STATIC "global_static")

SET(SHM_SHARED "shm_shared")
SET(SHM_STATIC "shm_static")

# SET(LOCK_SHARED "lock_shared")
# SET(LOCK_STATIC "lock_static")
# SET(MODEL_SHARED "model_shared")
# SET(MODEL_STATIC "model_static")
# SET(SOCK_SHARED "sock_shared")
# SET(SOCK_STATIC "sock_static")
# SET(SYS_SHARED "sys_shared")
# SET(SYS_STATIC "sys_static")
# SET(TIME_SHARED "time_shared")
# SET(TIME_STATIC "time_static")


ADD_SUBDIRECTORY(global)
ADD_SUBDIRECTORY(shm)

# ADD_SUBDIRECTORY(lock)
# ADD_SUBDIRECTORY(model)
# ADD_SUBDIRECTORY(shm)
# ADD_SUBDIRECTORY(sock)
# ADD_SUBDIRECTORY(sys)
# ADD_SUBDIRECTORY(time)
