AUX_SOURCE_DIRECTORY(. SRC)
ADD_EXECUTABLE(rwlock ${SRC})

IF (GLOBAL AND LOCK)
	TARGET_LINK_LIBRARIES(rwlock ${GLOBAL} ${LOCK})
	INSTALL(TARGETS rwlock RUNTIME DESTINATION bin)
ELSE (GLOBAL AND LOCK)
	IF (NOT GLOBAL)
		MESSAGE("can't find libTimepassGlobal.so")
	ENDIF (NOT GLOBAL)

	IF (NOT LOCK)
		MESSAGE("can't find libTimepassLock.so")
	ENDIF (NOT LOCK)
ENDIF (GLOBAL AND LOCK)