AUX_SOURCE_DIRECTORY(. SRC)
ADD_EXECUTABLE(timer ${SRC})

IF (GLOBAL AND TIME)
	TARGET_LINK_LIBRARIES(timer ${GLOBAL} ${TIME})
	INSTALL(TARGETS timer RUNTIME DESTINATION bin)
ELSE (GLOBAL AND TIME)
	IF (NOT GLOBAL)
		MESSAGE("can't find libTimepassGlobal.so")
	ENDIF (NOT GLOBAL)

	IF (NOT TIME)
		MESSAGE("can't find libTimepassTime.so")
	ENDIF (NOT TIME)
ENDIF (GLOBAL AND TIME)