AUX_SOURCE_DIRECTORY(. LOCK_SRC)

FILE(GLOB LOCK_INCLUDE ./*.h)

ADD_LIBRARY(lock_shared SHARED ${LOCK_SRC})
ADD_LIBRARY(lock_static STATIC ${LOCK_SRC})

INSTALL(TARGETS lock_shared LIBRARY DESTINATION lib)
INSTALL(TARGETS lock_static ARCHIVE DESTINATION lib)
INSTALL(FILES ${LOCK_INCLUDE} DESTINATION include/lock)

SET_TARGET_PROPERTIES(lock_shared PROPERTIES OUTPUT_NAME "TimepassLock")
SET_TARGET_PROPERTIES(lock_static PROPERTIES OUTPUT_NAME "TimepassLock")