AUX_SOURCE_DIRECTORY(. LOCK_SRC)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
FILE(GLOB LOCK_INCLUDE ./*.h)


ADD_LIBRARY(${LOCK_SHARED} SHARED ${LOCK_SRC})
ADD_LIBRARY(${LOCK_STATIC} STATIC ${LOCK_SRC})

TARGET_LINK_LIBRARIES(${LOCK_SHARED} global_shared)

INSTALL(TARGETS ${LOCK_SHARED} LIBRARY DESTINATION lib)
INSTALL(TARGETS ${LOCK_STATIC} ARCHIVE DESTINATION lib)
INSTALL(FILES ${LOCK_INCLUDE} DESTINATION include/lock)

SET_TARGET_PROPERTIES(${LOCK_SHARED} PROPERTIES OUTPUT_NAME "TimepassLock")
SET_TARGET_PROPERTIES(${LOCK_STATIC} PROPERTIES OUTPUT_NAME "TimepassLock")