AUX_SOURCE_DIRECTORY(. MODEL_SRC)

FILE(GLOB MODEL_INCLUDE ./*.h)

# ADD_LIBRARY(model_shared SHARED ${MODEL_SRC})
# ADD_LIBRARY(model_static STATIC ${MODEL_SRC})

# INSTALL(TARGETS model_shared LIBRARY DESTINATION lib)
# INSTALL(TARGETS model_static ARCHIVE DESTINATION lib)
INSTALL(FILES ${MODEL_INCLUDE} DESTINATION include/model)

# SET_TARGET_PROPERTIES(model_shared PROPERTIES OUTPUT_NAME "TimepassModel")
# SET_TARGET_PROPERTIES(model_static PROPERTIES OUTPUT_NAME "TimepassModel")