AUX_SOURCE_DIRECTORY(. MODEL_SRC)

FILE(GLOB MODEL_INCLUDE ./*.h)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

# ADD_LIBRARY(${MODEL_SHARED} SHARED ${MODEL_SRC})
# ADD_LIBRARY(${MODEL_STATIC} STATIC ${MODEL_SRC})

# INSTALL(TARGETS ${MODEL_SHARED} LIBRARY DESTINATION lib)
# INSTALL(TARGETS ${MODEL_STATIC} ARCHIVE DESTINATION lib)
INSTALL(FILES ${MODEL_INCLUDE} DESTINATION include/model)

# SET_TARGET_PROPERTIES(${MODEL_SHARED} PROPERTIES OUTPUT_NAME "TimepassModel")
# SET_TARGET_PROPERTIES(${MODEL_STATIC} PROPERTIES OUTPUT_NAME "TimepassModel")