AUX_SOURCE_DIRECTORY(. SHM_SRC)

FILE(GLOB SHM_INCLUDE ./*.h)

ADD_LIBRARY(shm_shared SHARED ${SHM_SRC})
ADD_LIBRARY(shm_static STATIC ${SHM_SRC})

INSTALL(TARGETS shm_shared LIBRARY DESTINATION lib)
INSTALL(TARGETS shm_static ARCHIVE DESTINATION lib)
INSTALL(FILES ${SHM_INCLUDE} DESTINATION include/shm)

SET_TARGET_PROPERTIES(shm_shared PROPERTIES OUTPUT_NAME "TimepassShm")
SET_TARGET_PROPERTIES(shm_static PROPERTIES OUTPUT_NAME "TimepassShm")