AUX_SOURCE_DIRECTORY(. SOCK_SRC)

FILE(GLOB SOCK_INCLUDE ./*.h)

ADD_LIBRARY(sock_shared SHARED ${SOCK_SRC})
ADD_LIBRARY(sock_static STATIC ${SOCK_SRC})

INSTALL(TARGETS sock_shared LIBRARY DESTINATION lib)
INSTALL(TARGETS sock_static ARCHIVE DESTINATION lib)
INSTALL(FILES ${SOCK_INCLUDE} DESTINATION include/sock)

SET_TARGET_PROPERTIES(sock_shared PROPERTIES OUTPUT_NAME "TimepassSock")
SET_TARGET_PROPERTIES(sock_static PROPERTIES OUTPUT_NAME "TimepassSock")