AUX_SOURCE_DIRECTORY(. SOCK_SRC)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

FILE(GLOB SOCK_INCLUDE ./*.h)

ADD_LIBRARY(${SOCK_SHARED} SHARED ${SOCK_SRC})
ADD_LIBRARY(${SOCK_STATIC} STATIC ${SOCK_SRC})

INSTALL(TARGETS ${SOCK_SHARED} LIBRARY DESTINATION lib)
INSTALL(TARGETS ${SOCK_STATIC} ARCHIVE DESTINATION lib)
INSTALL(FILES ${SOCK_INCLUDE} DESTINATION include/sock)

SET_TARGET_PROPERTIES(${SOCK_SHARED} PROPERTIES OUTPUT_NAME "TimepassSock")
SET_TARGET_PROPERTIES(${SOCK_STATIC} PROPERTIES OUTPUT_NAME "TimepassSock")