AUX_SOURCE_DIRECTORY(. SYS_SRC)

FILE(GLOB SYS_INCLUDE ./*.h)

ADD_LIBRARY(sys_shared SHARED ${SYS_SRC})
ADD_LIBRARY(sys_static STATIC ${SYS_SRC})

INSTALL(TARGETS sys_shared LIBRARY DESTINATION lib)
INSTALL(TARGETS sys_static ARCHIVE DESTINATION lib)
INSTALL(FILES ${SYS_INCLUDE} DESTINATION include/sys)

SET_TARGET_PROPERTIES(sys_shared PROPERTIES OUTPUT_NAME "TimepassSys")
SET_TARGET_PROPERTIES(sys_static PROPERTIES OUTPUT_NAME "TimepassSys")