AUX_SOURCE_DIRECTORY(. SYS_SRC)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

FILE(GLOB SYS_INCLUDE ./*.h)

ADD_LIBRARY(${SYS_SHARED} SHARED ${SYS_SRC})
ADD_LIBRARY(${SYS_STATIC} STATIC ${SYS_SRC})

INSTALL(TARGETS ${SYS_SHARED} LIBRARY DESTINATION lib)
INSTALL(TARGETS ${SYS_STATIC} ARCHIVE DESTINATION lib)
INSTALL(FILES ${SYS_INCLUDE} DESTINATION include/sys)

SET_TARGET_PROPERTIES(${SYS_SHARED} PROPERTIES OUTPUT_NAME "TimepassSys")
SET_TARGET_PROPERTIES(${SYS_STATIC} PROPERTIES OUTPUT_NAME "TimepassSys")