AUX_SOURCE_DIRECTORY(. TIME_SRC)

FILE(GLOB TIME_INCLUDE ./*.h)

ADD_LIBRARY(time_shared SHARED ${TIME_SRC})
ADD_LIBRARY(time_static STATIC ${TIME_SRC})

INSTALL(TARGETS time_shared LIBRARY DESTINATION lib)
INSTALL(TARGETS time_static ARCHIVE DESTINATION lib)
INSTALL(FILES ${TIME_INCLUDE} DESTINATION include/time)

SET_TARGET_PROPERTIES(time_shared PROPERTIES OUTPUT_NAME "TimepassTime")
SET_TARGET_PROPERTIES(time_static PROPERTIES OUTPUT_NAME "TimepassTime")