AUX_SOURCE_DIRECTORY(. TIME_SRC)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
FILE(GLOB TIME_INCLUDE ./*.h)

ADD_LIBRARY(${TIME_SHARED} SHARED ${TIME_SRC})
ADD_LIBRARY(${TIME_STATIC} STATIC ${TIME_SRC})

INSTALL(TARGETS ${TIME_SHARED} LIBRARY DESTINATION lib)
INSTALL(TARGETS ${TIME_STATIC} ARCHIVE DESTINATION lib)
INSTALL(FILES ${TIME_INCLUDE} DESTINATION include/time)

SET_TARGET_PROPERTIES(${TIME_SHARED} PROPERTIES OUTPUT_NAME "TimepassTime")
SET_TARGET_PROPERTIES(${TIME_STATIC} PROPERTIES OUTPUT_NAME "TimepassTime")