AUX_SOURCE_DIRECTORY(. SRC)
ADD_EXECUTABLE(shm_hashlist ${SRC})

IF (GLOBAL AND SHM)
	TARGET_LINK_LIBRARIES(shm_hashlist ${GLOBAL} ${SHM})
	INSTALL(TARGETS shm_hashlist RUNTIME DESTINATION bin)
ELSE (GLOBAL AND SHM)
	IF (NOT GLOBAL)
		MESSAGE("can't find libTimepassGlobal.so")
	ENDIF (NOT GLOBAL)

	IF (NOT SHM)
		MESSAGE("can't find libTimepassShm.so")
	ENDIF (NOT SHM)
ENDIF (GLOBAL AND SHM)
